--- a/bin/.flt/fleet-vm.templ
+++ b/bin/.flt/fleet-vm.templ
@@ -103,13 +103,8 @@ sed -i "s/\[ -z \"\$PS1\" ] && return//" /etc/bash.bashrc
   echo "shopt -s expand_aliases"
   echo ""
   echo "alias k='kubectl'"
-  echo "alias kga='kubectl get all'"
-  echo "alias kgaa='kubectl get all --all-namespaces'"
   echo "alias kaf='kubectl apply -f'"
   echo "alias kdelf='kubectl delete -f'"
-  echo "alias kl='kubectl logs'"
-  echo "alias kccc='kubectl config current-context'"
-  echo "alias kcgc='kubectl config get-contexts'"
   echo "alias kj='kubectl exec -it jumpbox -- bash -l'"
   echo "alias kje='kubectl exec -it jumpbox -- '"
   echo ""
@@ -209,6 +204,9 @@ fi
 
 echo "$(date +'%Y-%m-%d %H:%M:%S')  cloning GitHub repos" >> status
 git clone "https://$(cat .ssh/akdc.pat)@github.com/$AKDC_REPO" gitops
+
+# change ownership
+chown -R ${AKDC_ME}:${AKDC_ME} /home/${AKDC_ME}
 
 # checkout the branch
 if [ "$AKDC_BRANCH" != "main" ]
